Fixing a small compatibility error